// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InArticlePuff should render optional fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb cRoLPq"
  >
    <div
      class="sc-ifAKCX KkDWT"
    >
      <a
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-bdVaJa eDCunu"
        >
          <img
            src="https://via.placeholder.com/150"
          />
        </div>
      </a>
    </div>
    <div
      class="sc-EHOje IpVdQ"
    >
      <div>
        <div
          class="sc-bZQynM jqKGjg"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-gzVnrw ddnAwC"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
        <div
          class="sc-htoDjs kcidiQ"
        >
          Enter your postcode to find your nearest centre
        </div>
      </div>
      <a
        class="sc-bwzfXH gpLJAb"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-htpNat irNLqr"
        >
          Read the full article
        </div>
        <svg
          class="iconForwardChevron"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render required fields correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-bxivhb cRoLPq"
  >
    <div
      class="sc-EHOje dPMypA"
    >
      <div>
        <div
          class="sc-bZQynM hqjcdE"
        >
          interactive
        </div>
        <a
          href="https://www.thetimes.co.uk"
        >
          <h4
            class="sc-gzVnrw foWuIq"
          >
            Where can I get a Covid vaccine in England?
          </h4>
        </a>
      </div>
      <a
        class="sc-bwzfXH gpLJAb"
        href="https://www.thetimes.co.uk"
      >
        <div
          class="sc-htpNat irNLqr"
        >
          Read more
        </div>
        <svg
          class="iconForwardChevron"
          height="18"
          width="8"
        >
          IconForwardChevron
        </svg>
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`InArticlePuff should render the initial loading state correctly 1`] = `
<DocumentFragment>
  <div
    class="sc-dnqmqq jYleKb"
  >
    <div>
      Placeholder
    </div>
  </div>
</DocumentFragment>
`;
